correct description for homepage of codingpedia.org

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
 title: "Sharing coding knowledge"
-description: "Describe this nonsense."
+description: "Coding knowledge hub, providing free educational content for professionals involved in software development. The website covers different topics and technologies with posts whose difficulty levels range from beginner to “hard-core” programming."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 ---
