--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: "Sharing coding knowledge"
+title: "Share coding knowledge"
 description: "Coding knowledge hub, providing free educational content for professionals involved in software development. The website covers different topics and technologies with posts whose difficulty levels range from beginner to “hard-core” programming."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
