add - automatically generated structured data to blog posts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: post-index
 title: "Share coding knowledge"
 description: "Coding knowledge hub, providing free educational content for professionals involved in software development. The website covers different topics and technologies with posts whose difficulty levels range from beginner to “hard-core” programming."
 tags: [Jekyll, theme, themes, responsive, blog, modern]
+author: ama
 comments: false
 ---
 
